--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
-<html>
-	<body>
-		<h1>Hello</h1>
+<html lang="en">
+	<body id="root">
 	</body>
+	<script type="module" src="./src/App.tsx"></script>
+	<style>
+	html, body {
+		width: 100%;
+		height: 100%;
+		margin: 0;
+		padding: 0;
+	}
+	</style>
 </html>
