--- a/react/index.html
+++ b/react/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 	<body id="root">
 	</body>
+	<script>
+		var global = global || window;
+		var Buffer = Buffer || [];
+		var process = process || {
+			env: { DEBUG: undefined },
+			version: []
+		};
+	</script>
 	<script type="module" src="./src/App.tsx"></script>
 	<style>
 	html, body {
